05-ingress-resouce.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: demo.localdev.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mynginx
            port:
              number: 80
      - path: /tomcat/
        pathType: Prefix
        backend:
          service:
            name: mytomcat
            port:
              number: 80
  - host: httpd.localdev.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: myhttpd
            port:
              number: 80
